# Codes

./: 20240107NCA_g_0_64_beta04  M_H_loc_gam_{0, 1}to.txt  sdf.text  test.cpp  test.sh
C++/: 2023 05 27 (1) .cpp  2023 05 27.cpp  2023 05 28 Pb1 .cpp  2023 05 28 sample.cpp  2023 06 08 note.cpp  2023 06 09 note.cpp  2023 06 22 header test.cpp  2023 06 28.cpp  2023 08 16 test.cpp  2023_06_23.cpp  2023_08_19.cpp  2023_08_19_2.cpp  2023_08_26.cpp  2023_08_28.cpp  2023_09_04_lecture.cpp  2023_09_15.cpp  2023_09_27.cpp  2023_09_27_Eigen.cpp  2023_09_28_Vector.cpp  2023_10_03.cpp  2023_10_11_Linux.cpp  2023_11_03_gnuplot.cpp  2023_11_20_NCA_Final.cpp  2023_12_22_NCA_Trap.cpp  2023_12_27.cpp  2024-03-01_OCA_opti.cpp  2024_01_11_NCA_square.cpp  2024_02_08_OCA.cpp  2024_02_08_OCA_Trap.cpp  2024_02_23_testver.cpp  2024_02_24_NCA_Rev.cpp  2024_02_27_OCA_rev.cpp  2024_03_06_coupfunc.cpp  2024_04_30_simple_cal_speedtest.cpp  2025_01_21_test  2025_01_21_test.cpp  OCA_Function_def.hpp  firstheader.hpp  notepad.cpp
MATLAB/: EM_20230324.m  EM_20230324_HW2.m  EM_20230324_HW2_N100.m  EM_20230324_HW2_N_10.m  untitled.m
Mpi/: 2023_12_29_mpirunnn  2023_12_29_mpirunnn.cpp
Python/: 11111.txt  2023 04 24 jjjj.ipynb  2023 05 02 g_JSON output.ipynb  2023 05 02 g_plot.ipynb  2023 05 05  pde.ipynb  2023 05 06 FDTD etc.ipynb  2023 05 07 FDTD testing.ipynb  2023 05 08 Digit_test_error.ipynb  2023 05 18 bosedistribution_test.ipynb  2023 05 18 functions.ipynb  2023 05 21 Gaussian wave packet.ipynb  2023 05 23 Note.ipynb  2023 05 23 Numerical_1.ipynb  2023 05 23 fdtd testing.ipynb  2023 05 24 testing.ipynb  2023 05 26 1D JJ.ipynb  2023 05 28 pb1.ipynb  2023 05 29 RC, MC.ipynb  2023 05 29 group.ipynb  2023 06 01 stuff.ipynb  2023 06 03 td delta pulse.ipynb  2023 06 05 interpolation practice.ipynb  2023 06 07 test.ipynb  2023 06 09 Pb2738.ipynb  2023 06 15 Note.ipynb  (+185 more)
RSJJ/: CMakeLists.txt  test.json
RSJJ/include/: configuration.hpp  controller.hpp  diagram.hpp  dirmanip.hpp  dyson.hpp  graph.hpp  green.hpp  lattice.hpp  lattice.old  parameters.hpp
RSJJ/src/: bold_GW_2d.cpp  configuration.cpp  controller.cpp  diagMCvertex.cpp  diagram.cpp  dyson.cpp  element.cpp  graph.cpp  green.cpp  lattice.cpp  lattice.old  main.cpp  parameters.cpp  selfconsistency.cpp  selfconsistency_Ladder.cpp  selfconsistency_NCA.cpp  selfconsistency_Order2.cpp  selfconsistency_Q2.cpp  selfconsistency_TCA.cpp  selfconsistency_TOA.cpp  singleModeWaveguide_diagMC.cpp
(+830 files in other folders)
